--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,8 @@
               <br/><br/>
               <h2>Want to start learning something new?</h2>
               <br/>
-                <p>Below you will find information and notes that I have gathered throughout my years as a student in regards to Engineering and Programming</p>
-                <p>Not only will this include Programming Paradigms and languages but also information on cloud services, AI and much more</a></p>
-                <p>If you have any questions, please feel free to contact me at <a href="mailto:ashinhust.brass@gmail.com">ashinhust.brass@gmail.com</a></p>
+                <p>Here you can see previous projects I have contributed on over the course of my Computer Science journey.</p>
+                <p>Please feel free to contact me at <a href="mailto:zacklacanna23@gmail.com">zacklacanna23@gmail.com</a></p>
                 <br/>
               </div>
         </div>
