--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -151,9 +151,9 @@ h6 {
         padding: 0;
     }
 
-    ul.banner-social-buttons > li:last-child {
+/*     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
-    }
+    } */
 }
 
 footer {
