--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -119,7 +119,7 @@ h6 {
 .banner h2 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .banner ul {
@@ -138,7 +138,7 @@ h6 {
     }
 }
 
-@media(max-width:897px) {
+@media(max-width:1097px) {
     .banner h2 {
         margin: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
@@ -151,9 +151,9 @@ h6 {
         padding: 0;
     }
 
-/*     ul.banner-social-buttons > li:last-child {
+    ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
-    } */
+    } 
 }
 
 footer {
