--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -146,7 +146,7 @@ h6 {
     }
 
     ul.banner-social-buttons > li {
-        display: block;
+        display: flex;
         margin-bottom: 15px;
         padding: 0;
     }
