--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -129,6 +129,8 @@ h6 {
 .banner-social-buttons {
     float: right;
     margin-top: 0;
+    width: 25%; /* three boxes (use 25% for four, and 50% for two, etc) */
+    padding: 25px;
 }
 
 @media(max-width:1199px) {
