--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -150,11 +150,14 @@ h6 {
     ul.banner-social-buttons > li {
         display: flex;
         margin-bottom: 15px;
+        width: 25%; /* three boxes (use 25% for four, and 50% for two, etc) */
+        padding: 25px;
         padding: 0;
     }
 
     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
+        width: 25%;
     } 
 }
 
